service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dadjokes
  namespace: sre-techtask
spec:
  selector:
    app: dadjokes
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8100
  type: ClusterIP
