ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dadjokes
  namespace: sre-techtask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dadjokes.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dadjokes
            port:
              number: 80
